--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -72,8 +72,8 @@ Seconds to minutes to hours
 Im thinking of a number between 1 and 100
 	Can you guess what it is? 
 	your guess was: 13
-	The number i was thinking of was: 97
-	you were off by -84
+	The number i was thinking of was: 30
+	you were off by -17
 	
 <--
 	[OUTPUT OK]
@@ -223,8 +223,13 @@ Im thinking of a number between 1 and 100
 TestCh7Ex3.java:40: error: incompatible types: int[] cannot be converted to int
 	            int gotBack = Exercise3.indexOfMax(someInts);
 	                                               ^
+	TestCh7Ex3.java:45: error: cannot find symbol
+	                dedcut(0.02);
+	                ^
+	  symbol:   method dedcut(double)
+	  location: class TestCh7Ex3
 	Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
-	1 error
+	2 errors
 	
 -----------END COMPILE-------
 [SUMMARY] 
@@ -240,7 +245,7 @@ TestCh7Ex3.java:40: error: incompatible types: int[] cannot be converted to int
   [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
-  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
 [COMPILING] Exercise5.java
 	[SUCCESSFUL COMPILE] Exercise5.java
 [TESTING WITH] TestCh7Ex5
@@ -258,9 +263,10 @@ TestCh7Ex5.java:54: error: method areFactors in class Exercise5 cannot be applie
 -----------END COMPILE-------
 [SUMMARY] 
 	['Exercise5: COMPILE ERROR (- 0.30)'
-	 'Exercise6: MISSING (- 0.50)']
+	 'Exercise6: MISSING (- 0.50)'
+	 'Exercise8: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.00</b>
 
 </pre></body></html>
