--- a/stureports/think-java/heypoppins.think-java_results.html
+++ b/stureports/think-java/heypoppins.think-java_results.html
@@ -43,8 +43,8 @@ How many seconds?: 0 hours, 0 minutes, 13 seconds.
 [RUNNING] Exercise4
 -->
 What do you think my number is?: Your number was: 13
-	My number was: 43
-	You were off by: 30
+	My number was: 9
+	You were off by: 4
 	
 <--
 	[OUTPUT OK]
@@ -132,7 +132,7 @@ Ch6Ex4.java:56: error: cannot find symbol
   [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
-  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
 	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
