--- a/stureports/think-java/Jake4902.think-java_results.html
+++ b/stureports/think-java/Jake4902.think-java_results.html
@@ -53,7 +53,7 @@ Enter seconds:
 I'm thinking of a number between 1 and 100
 	(including both). Can you guess what it is?
 	Type a number: Your guess is: 13
-	The number I was thinking of is: 99
+	The number I was thinking of is: 42
 	You were off by: 100
 	
 <--
@@ -216,7 +216,7 @@ Not DoubloonIs DoubloonIs DoubloonIs DoubloonNot DoubloonIs DoubloonNot Doubloon
   [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
-  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
 	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
