--- a/stureports/think-java/MegaMichael1000.think-java_results.html
+++ b/stureports/think-java/MegaMichael1000.think-java_results.html
@@ -67,8 +67,8 @@ Enter the amount of seconds: 13 seconds = 0 hours, 0 minutes, 13 seconds.
 I'm thinking of a number between 1 and 100
 	(including both). Can you guess what it is?
 	Type a number: Your guess is: 13
-	The number I was thinking of is: 64
-	You were off by: 51
+	The number I was thinking of is: 82
+	You were off by: 69
 	
 <--
 	[OUTPUT OK]
@@ -178,7 +178,7 @@ I'm thinking of a number between 1 and 100
   [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
-  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
 	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
