--- a/stureports/think-java/banjojeebus.think-java_results.html
+++ b/stureports/think-java/banjojeebus.think-java_results.html
@@ -111,7 +111,7 @@ Seconds remaining: 39870
   [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
-  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
 	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
