"report check in 2018-10-21"

--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -72,8 +72,8 @@ Seconds to minutes to hours
 Im thinking of a number between 1 and 100
 	Can you guess what it is? 
 	your guess was: 13
-	The number i was thinking of was: 30
-	you were off by -17
+	The number i was thinking of was: 66
+	you were off by -53
 	
 <--
 	[OUTPUT OK]
@@ -223,13 +223,8 @@ Im thinking of a number between 1 and 100
 TestCh7Ex3.java:40: error: incompatible types: int[] cannot be converted to int
 	            int gotBack = Exercise3.indexOfMax(someInts);
 	                                               ^
-	TestCh7Ex3.java:45: error: cannot find symbol
-	                dedcut(0.02);
-	                ^
-	  symbol:   method dedcut(double)
-	  location: class TestCh7Ex3
 	Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [SUMMARY] 
