--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -172,12 +172,7 @@ TestCh7Ex3.java:40: error: cannot find symbol
 	                                   ^
 	  symbol:   method indexOfMax(int[])
 	  location: class Exercise3
-	TestCh7Ex3.java:45: error: cannot find symbol
-	                dedcut(0.02);
-	                ^
-	  symbol:   method dedcut(double)
-	  location: class TestCh7Ex3
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [COMPILING] Exercise4.java
@@ -189,13 +184,8 @@ TestCh7Ex3.java:40: error: cannot find symbol
 TestCh7Ex4.java:47: error: incompatible types: int cannot be converted to String[]
 	            boolean[] gotBack = Exercise4.sieve(n);
 	                                                ^
-	TestCh7Ex4.java:55: error: cannot find symbol
-	                dedcut(0.03);
-	                ^
-	  symbol:   method dedcut(double)
-	  location: class TestCh7Ex4
 	Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [SUMMARY] 
